--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ body {
     padding: var(--padding-container);
 }
 
+/*hero*/
 .hero {
     width: 100%;
     height: 100vh;
@@ -35,12 +36,31 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../img/computer.jpg');
+    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../img/fondo1.jpg');
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
     z-index: -1;
 }
 
+.hero__container {
+    max-width: 800px;
+    --padding-container: 0;
+    display: grid;
+    grid-auto-rows: max-content;
+    align-content: center;
+    gap: 1em;
+    padding-bottom: 100px;
+    text-align: center;
+}
+
+.hero__title {
+    font-size: 3rem;
+}
+
+.hero__paragraph {
+    margin-bottom: 20px;
+}
+/*nav*/
 .nav {
     --padding-container: 0;
     height: 100%;
@@ -54,11 +74,33 @@ body {
 
 .nav__link {
     margin-left: auto;
+    position: relative;
     padding: 0;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: max-content;
     gap: 2em;
+    font-weight: 700;
+    transition: color 0.25s;
+}
+
+.nav__links:hover{
+    color: #ffd700;
+}
+
+.nav__links::before {
+    content: '';
+    position: absolute;
+    bottom: -0.125rem;
+    left: 0;
+    width: 0;
+    height: 0.0625rem;
+    background-color: ffd700;
+    transition: width 0.25s;
+}
+
+.nav__links:hover::before {
+    width: 100%;
 }
 
 .nav__items {
@@ -85,25 +127,8 @@ body {
     display: var(--show, none);
 }
 
-.hero__container {
-    max-width: 800px;
-    --padding-container: 0;
-    display: grid;
-    grid-auto-rows: max-content;
-    align-content: center;
-    gap: 1em;
-    padding-bottom: 100px;
-    text-align: center;
-}
 
-.hero__title {
-    font-size: 3rem;
-}
-
-.hero__paragraph {
-    margin-bottom: 20px;
-}
-
+/*bottom*/
 .cta {
     display: inline-block;
     background-color: #2091F9;
@@ -114,6 +139,11 @@ body {
     border-radius: 32px;
 }
 
+.cta:hover{
+    background-color: #ffd700;
+}
+
+/*about*/
 .about {
     text-align: center;
 }
@@ -151,6 +181,7 @@ body {
     width: 40px;
 }
 
+/*knowledge*/
 .knowledge {
     background-color: #e5e5f7;
     background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
@@ -250,6 +281,16 @@ body {
     font-weight: 600;
     color: var(--color-cta);
     box-shadow: 0 0 1px rgba(0, 0, 0, .5);
+}
+
+.price__cta:hover{
+    background-color: #5454D4;
+    color: #fff;
+}
+
+.price__cta-color:hover{
+    background-color: #fff;
+    color: var(--bg-cta);
 }
 
 /* Testimony */
@@ -467,6 +508,12 @@ body {
 
 .footer__img{
     width: 30px;
+    transition: transform 0.25s;
+}
+
+.footer__img:hover{
+    transform: scale(1.25);
+    background-color: #ffd700;
 }
 
 /* Media queries */
