--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,5 +1,5 @@
 
- *{
+*{
     margin: 0;
     box-sizing: border-box;
 } 
@@ -13,7 +13,9 @@ html {
 
 body {
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
+
 
 main {
     display: block;
