--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -72,21 +72,15 @@
     }
     
     &__icons{
-        margin-bottom: 10px;
-
-        &:hover{
-            color: #ffd700;
-        }
-    }
-
-    &__img{
-        font-size: 1.75rem;
+        font-size: 1.5rem;
         transition: transform 0.25s;
+        margin-bottom: 10px;
         color: #fff;
+        padding: 1rem;
 
         &:hover{
-            transform: scale(1.25);
             color: #ffd700;
+            transform: scale(1.5);
         }
     }
     
